Feature/station (#8)
* Add station controller

* export find function in station model

* Add station endpoints in swagger
